<?xml version="1.0"?>
<package format="2">
    <name>scanse_sweep</name>
    <version>0.2.0</version>
    <description>Standalone ROS driver for Scanse Sweep LIDAR</description>

    <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>libpcl-all-dev</depend>
    <depend>pcl_conversions</depend>
    <depend>rosconsole</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>

    <exec_depend>pointcloud_to_laserscan</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
